--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/zex.css">
-    <title>zEx</title>
-  </head>
+---
+layout: default
+title: zEx
+---
 
-  <body>
-    <div class="userpic">
-      <div class="shine"></div>
-    </div>
-    <div class="welcome">Welcome to zEx'blog</div>
-  </body>
-</html>
+<div class="hd">
+  <div class="userpic">
+    <div class="shine"></div>
+  </div>
+  <div class="twitter"></div>
+</div>
+<div class="welcome">Welcome to zEx'blog</div>
