使用sass和compass制作vcard，翻译完成

--- a/PPT/plugin/markdown/GEM/index.html
+++ b/PPT/plugin/markdown/GEM/index.html
@@ -4,12 +4,12 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Template</title>
+		<title>GEM</title>
 
 		<link rel="stylesheet" href="../../../css/reveal.css">
 		<link rel="stylesheet" href="../../../css/theme/default.css" id="theme">
-
         <link rel="stylesheet" href="../../../lib/css/zenburn.css">
+        <link rel="stylesheet" href="../../../css/custom.css">
 	</head>
 
 	<body>
@@ -19,7 +19,7 @@
 			<div class="slides">
 
                 <!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
-                <section data-markdown="example.md" data-separator="^\n\n\n" data-vertical="^\n\n"></section>
+                <section data-markdown="content.md" data-separator="^\n\n\n" data-vertical="^\n\n"></section>
 
             </div>
 		</div>
