--- a/PPT/plugin/markdown/scss_1/index.html
+++ b/PPT/plugin/markdown/scss_1/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>SCSS简介</title>
+		<title>SCSS教程</title>
 
 		<link rel="stylesheet" href="../../../css/reveal.css">
 		<link rel="stylesheet" href="../../../css/theme/default.css" id="theme">
