--- a/website/mobile-ad/pages/mobile-ad.html
+++ b/website/mobile-ad/pages/mobile-ad.html
@@ -49,6 +49,7 @@ include "_header"
     mode: 'vertical'
   })
   var SwiperNested1 = new Swiper('.swiper-nested-1',{
+  	loop: true
   })
   </script>
 
