--- a/website/sg-h5-swiper/pages/page.html
+++ b/website/sg-h5-swiper/pages/page.html
@@ -20,6 +20,7 @@
 
 
 <div class="loadPage" style="z-index:99999;">
+	<div class="holder-box"></div>
     <div class="loading">
     	<div class="wrap">
     		<div class="inner">
