--- a/website/sg-h5-swiper/pages/page-bak.html
+++ b/website/sg-h5-swiper/pages/page-bak.html
@@ -28,7 +28,8 @@
 	        </div>
     	</div>
         <div class="loading-num">
-        	努力加载中... <span></span>
+        	Loading... <span></span>
+        	<div class="subinfo">建议在WiFi下观看</div>
         </div>
 
     </div>
@@ -36,7 +37,7 @@
 
 
 <div class="swiper-container">
-	<div class="swiper-wrapper">
+  <div class="swiper-wrapper">
 	<div class="swiper-slide section section1">
 		<div class="logo">
 			<img src="../img/1/logo.png" alt="">
@@ -138,10 +139,13 @@
 			<div class="prison">
 				<img src="../img/5/prison.png" alt="">
 			</div>
-			<div class="p zoomOut ani-ele">
-				<img src="../img/5/p.png" alt="">
-			</div>
-			
+			<img src="../img/5/ldm.png" alt="" class="ldm zoomOut ani-ele">
+			<img src="../img/5/gmm.png" alt="" class="gmm zoomOut ani-ele">
+			<img src="../img/5/hhb.png" alt="" class="hhb zoomOut ani-ele">
+			<img src="../img/5/kzd.png" alt="" class="kzd zoomOut ani-ele">
+			<img src="../img/5/fzm.png" alt="" class="fzm zoomOut ani-ele">
+			<img src="../img/5/ncs.png" alt="" class="ncs zoomOut ani-ele">
+			<img src="../img/5/yxj.png" alt="" class="yxj zoomOut ani-ele">
 			<!-- 热度 -->
 			<div class="hot zoomIn ani-ele">
 				<img src="../img/5/hot.png" alt="">
@@ -268,50 +272,6 @@
 	</div>
 	<div class="swiper-slide section section11">
 		<div class="adjust-box"></div>
-		<!-- 王思聪文字 -->
-		<div class="txt">
-			<img src="../img/13/txt.png" alt="">
-		</div>
-		<div class="adjust-box2"></div>
-		<div class="wrap">
-			<div>
-				<img src="../img/13/wsc.png" alt="">
-			</div>
-			<div class="wsc ani-ele">
-				<img src="../img/13/wsct.png" alt="">
-			</div>
-			
-			<!-- 热度 -->
-			<div class="hot zoomIn ani-ele">
-				<img src="../img/13/hot.png" alt="">
-			</div>
-		</div>
-		<div class="arr-box"></div>
-	</div>
-	<div class="swiper-slide section section12">
-		<div class="adjust-box"></div>
-		<!-- 川总文字 -->
-		<div class="txt">
-			<img src="../img/14/txt.png" alt="">
-		</div>
-		<div class="adjust-box2"></div>
-		<div class="wrap">
-			<div>
-				<img src="../img/14/chuan.png" alt="">
-			</div>
-			<div class="s-logo ani-ele">
-				<img src="../img/14/sogou-logo.png" alt="">
-			</div>
-			
-			<!-- 热度 -->
-			<div class="hot zoomIn ani-ele">
-				<img src="../img/14/hot.png" alt="">
-			</div>
-		</div>
-		<div class="arr-box"></div>
-	</div>
-	<div class="swiper-slide section section13">
-		<div class="adjust-box"></div>
 		<!-- 都教授文字 -->
 		<div class="txt">
 			<img src="../img/11/txt.png" alt="">
@@ -321,8 +281,23 @@
 			<div class="du ani-ele">
 				<img src="../img/11/du.png" alt="">
 			</div>
-			<img src="../img/11/ad.png" alt="">
-			
+			<img src="../img/11/ad1.png" alt="" class="ad1 flipinX ani-ele">
+			<img src="../img/11/ad2.png" alt="" class="ad2 flipinX ani-ele">
+
+			<img src="../img/11/ad3.png" alt="" class="ad3 flipinX ani-ele">
+			<img src="../img/11/ad4.png" alt="" class="ad4 flipinX ani-ele">
+
+			<img src="../img/11/ad5.png" alt="" class="ad5 flipinX ani-ele">
+			<img src="../img/11/ad6.png" alt="" class="ad6 flipinX ani-ele">
+
+			<img src="../img/11/ad7.png" alt="" class="ad7 flipinX ani-ele">
+			<img src="../img/11/ad8.png" alt="" class="ad8 flipinX ani-ele">
+
+			<img src="../img/11/ad9.png" alt="" class="ad9 flipinX ani-ele">
+			<img src="../img/11/ad10.png" alt="" class="ad10 flipinX ani-ele">
+
+			<img src="../img/11/ad11.png" alt="" class="ad11 flipinX ani-ele">
+			<img src="../img/11/ad12.png" alt="" class="ad12 flipinX ani-ele">
 			<!-- 热度 -->
 			<div class="hot zoomIn ani-ele">
 				<img src="../img/11/hot.png" alt="">
@@ -330,7 +305,7 @@
 		</div>
 		<div class="arr-box"></div>
 	</div>
-	<div class="swiper-slide section section14">
+	<div class="swiper-slide section section12">
 		<div class="adjust-box"></div>
 		<!-- 都教授文字2 -->
 		<div class="txt">
@@ -338,20 +313,46 @@
 		</div>
 		<div class="adjust-box2"></div>
 		<div class="wrap">
-			<div>
-				<img src="../img/12/du.png" alt="">
-			</div>
-			<div class="sogou zoomOut ani-ele">
-				<img src="../img/12/sogou.png" alt="">
-			</div>
+			<img src="../img/12/du.png" alt="">
+			<img src="../img/12/sogou.png" alt="" class="sogou zoomOut ani-ele">
+		</div>
+		<div class="arr-box"></div>
+	</div>
+	<div class="swiper-slide section section13">
+		<div class="adjust-box"></div>
+		<!-- 王思聪文字 -->
+		<div class="txt">
+			<img src="../img/13/txt.png" alt="">
+		</div>
+		<div class="adjust-box2"></div>
+		<div class="wrap">
+			<img src="../img/13/wsc.png" alt="">
+			<img src="../img/13/wsct.png" alt="" class="wsc ani-ele">
 			<!-- 热度 -->
 			<div class="hot zoomIn ani-ele">
-				<img src="../img/12/hot.png" alt="">
+				<img src="../img/13/hot.png" alt="">
 			</div>
 		</div>
-		
+		<div class="arr-box"></div>
 	</div>
-	<div class="swiper-slide section section-final" id="cover-final-box">
+	<div class="swiper-slide section section14">
+		<div class="adjust-box"></div>
+		<!-- 川总文字 -->
+		<div class="txt">
+			<img src="../img/14/txt.png" alt="">
+		</div>
+		<div class="adjust-box2"></div>
+		<div class="wrap">
+			<img src="../img/14/chuan.png" alt="">
+			<img src="../img/14/sogou-logo.png" alt="" class="s-logo ani-ele">
+			<!-- 热度 -->
+			<div class="hot zoomIn ani-ele">
+				<img src="../img/14/hot.png" alt="">
+			</div>
+		</div>
+		<div class="arr-box"></div>
+	</div>
+	<div class="swiper-slide section section-final">
 		<div class="cover">
 			<div class="inner">
 				<img src="../img/cover-final.png" alt="" id="cover-final">
@@ -359,12 +360,11 @@
 		</div>
 		<div class="cover-b-border"></div>
 		<div class="cover-r-border"></div>
-		<div class="open-box">
-			<a href="http://weixin.sogou.com/" class="open">立即开启</a>
-		</div>
-	</div>
+		<div class="open-box"><a href="" class="open">立即开启</a></div>
 	</div>
 </div>
+</div>
+
 
 
 <div class="suggest-box" id="suggest-box"></div>
@@ -374,7 +374,6 @@
 <script src="../../../js/jquery-1.11.1.js"></script>
 <script src="../js/idangerous.swiper.min.js"></script>
 <script src="../js/sg.js"></script>
-<script src="../js/wxShare.js"></script>
 
 </body>
 </html>
