--- a/website/sg-h5-swiper/pages/page.html
+++ b/website/sg-h5-swiper/pages/page.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<link rel="stylesheet" href="../css/idangerous.swiper.css">
 	<link rel="stylesheet" href="../css/sg-2014.css">
-	<title>搜狗2014年回顾</title>
+	<title>搜狗2014年热搜大事记</title>
 </head>
 
 
