--- a/website/epubit/html/index.html
+++ b/website/epubit/html/index.html
@@ -28,7 +28,7 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
 		        </button>
-		        <a class="navbar-brand" href="http://www.bootcss.com">
+		        <a class="navbar-brand" href="">
 					<img src="../static/images/logo.png" alt="">
 		        </a>
 			</div>
@@ -39,23 +39,326 @@
 					</li>
 				</ul>
 				<ul class="nav navbar-nav">
-					<li>
-						<a href="">首页</a>
-					</li>
-					<li>
-						<a href="">类别</a>
+					<li class="dropdown">
+						<a href="" class="dropdown-toggle" data-toggle="dropdown">技术圈<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li class="hasSub">
+								<a href="">IT文化与互联网</a>
+								<ul class="sub-menu2">
+									<li><a href="">IT文化</a></li>
+									<li><a href="">人文素养</a></li>
+									<li><a href="">社交媒体</a></li>
+									<li><a href="">网店运营</a></li>
+									<li><a href="">网络营销</a></li>
+									<li><a href="">新经济</a></li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="1.html">Web技术</a>
+								<ul class="sub-menu2">
+									<li class="hasSub">
+										<a href="">服务端开发</a>
+										<ul class="sub-menu2">
+											<li><a href="1.html">Node</a></li>
+											<li><a href="">PHP</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">互联网产品</a>
+									</li>
+									<li class="hasSub">
+										<a href="">交互设计</a>
+										<ul class="sub-menu2">
+											<li><a href="">可用性测试</a></li>
+											<li><a href="">用户体验</a></li>
+											<li><a href="">原型设计</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">前端开发</a>
+										<ul class="sub-menu2">
+											<li><a href="">CSS/CSS3</a></li>
+											<li><a href="">HTML/HTML5</a></li>
+											<li><a href="">JavaScript</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">网页开发</a>
+									</li>
+									<li class="hasSub">
+										<a href="">网页视觉</a>
+										<ul class="sub-menu2">
+											<li><a href="">Dreamweaver</a></li>
+											<li><a href="">Fireworks</a></li>
+											<li><a href="">Flash</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">网站建设</a>
+									</li>
+									<li class="hasSub">
+										<a href="">网站运营</a>
+										<ul class="sub-menu2">
+											<li><a href="">SEO</a></li>
+											<li><a href="">营销分析</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">响应式</a>
+									</li>
+									<li>
+										<a href="">移动端开发</a>
+									</li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">操作系统</a>
+								<ul class="sub-menu2">
+									<li><a href="">Linux/Unix</a></li>
+									<li><a href="">Mac OS</a></li>
+									<li><a href="">Windows</a></li>
+									<li><a href="">并行/并发处理</a></li>
+									<li><a href="">操作系统原理</a></li>
+									<li><a href="">文件系统</a></li>
+									<li><a href="">虚拟化</a></li>
+									<li class="hasSub">
+										<a href="">移动操作系统</a>
+										<ul class="sub-menu2">
+											<li><a href="">Android</a></li>
+											<li><a href="">iOS</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">计算机科学</a>
+								<ul class="sub-menu2">
+									<li class="hasSub">
+										<a href="">安全与加密</a>
+										<ul class="sub-menu2">
+											<li><a href="">计算机病毒</a></li>
+											<li><a href="">加密与解密</a></li>
+											<li><a href="">逆向工程</a></li>
+											<li><a href="">网络安全</a></li>
+										</ul>
+									</li>
+									<li><a href="">编译原理和编译器</a></li>
+									<li><a href="">计算机基础理论</a></li>
+									<li><a href="">计算机结构、设计与制造</a></li>
+									<li><a href="">计算机数学</a></li>
+									<li><a href="">人工智能</a></li>
+									<li><a href="">算法与数据结构</a></li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">软件开发</a>
+								<ul class="sub-menu2">
+									<li class="hasSub">
+										<a href="">编程语言</a>
+										<ul class="sub-menu2">
+											<li><a href="">.NET</a></li>
+											<li><a href="">C#</a></li>
+											<li><a href="">C++</a></li>
+											<li><a href="">C语言</a></li>
+											<li><a href="">Java</a></li>
+											<li><a href="">Python</a></li>
+											<li><a href="">Ruby/Rail</a></li>
+											<li><a href="">Spring</a></li>
+											<li><a href="">函数式语言</a></li>
+										</ul>
+									</li>
+									<li><a href="">并行/并发编程</a></li>
+									<li class="hasSub">
+										<a href="">架构与工具</a>
+										<ul class="sub-menu2">
+											<li><a href="">SOA</a></li>
+											<li><a href="">开发管理</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">软件工程与方法</a>
+										<ul class="sub-menu2">
+											<li><a href="">面向对象方法</a></li>
+											<li><a href="">软件测试与质量控制</a></li>
+											<li><a href="">软件过程</a></li>
+											<li><a href="">软件架构</a></li>
+										</ul>
+									</li>
+									<li><a href="">搜索算法</a></li>
+									<li><a href="">算法</a></li>
+									<li><a href="">图形编程</a></li>
+									<li class="hasSub">
+										<a href="">移动开发</a>
+										<ul class="sub-menu2">
+											<li><a href="">Android开发</a></li>
+											<li><a href="">iOS开发</a></li>
+											<li><a href="">跨平台</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">游戏设计与开发</a>
+										<ul class="sub-menu2">
+											<li><a href="">Cocos2d</a></li>
+											<li><a href="">OpenGL ES</a></li>
+											<li><a href="">Unity</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">数据科学</a>
+								<ul class="sub-menu2">
+									<li><a href="">存储</a></li>
+									<li class="hasSub">
+										<a href="">大数据</a>
+										<ul class="sub-menu2">
+											<li><a href="">Hadoop</a></li>
+											<li><a href="">HBase</a></li>
+											<li><a href="">MapReduce</a></li>
+											<li><a href="">MongoDB</a></li>
+											<li><a href="">Redis</a></li>
+											<li><a href="">Spark</a></li>
+										</ul>
+									</li>
+									<li><a href="">数据安全</a></li>
+									<li><a href="">数据可视化</a></li>
+									<li class="hasSub">
+										<a href="">数据库</a>
+										<ul class="sub-menu2">
+											<li><a href="">Access</a></li>
+											<li><a href="">MySQL</a></li>
+											<li><a href="">NoSQL</a></li>
+											<li><a href="">PostgreSQL</a></li>
+											<li><a href="">SQL Server</a></li>
+											<li><a href="">SQL语言</a></li>
+											<li><a href="">数据库理论</a></li>
+											<li><a href="">数据库设计与管理</a></li>
+											<li><a href="">数据挖掘</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">数据统计与分析</a>
+										<ul class="sub-menu2">
+											<li><a href="">R语言</a></li>
+											<li><a href="">SAS</a></li>
+											<li><a href="">SPSS</a></li>
+											<li><a href="">数据分析</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">数字艺术</a>
+								<ul class="sub-menu2">
+									<li class="hasSub">
+										<a href="">平面设计</a>
+										<ul class="sub-menu2">
+											<li><a href="">Acrobat</a></li>
+											<li><a href="">CorelDraw</a></li>
+											<li><a href="">Illustrator</a></li>
+											<li><a href="">InDesign</a></li>
+											<li><a href="">Lightroom</a></li>
+											<li><a href="">Painter</a></li>
+											<li><a href="">Photoshop</a></li>
+											<li><a href="">设计方法</a></li>
+											<li><a href="">设计文化</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">三维技术</a>
+										<ul class="sub-menu2">
+											<li><a href="">3D Max</a></li>
+											<li><a href="">3D打印</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">音视频制作</a>
+										<ul class="sub-menu2">
+											<li><a href="">After Effects</a></li>
+											<li><a href="">Audition</a></li>
+											<li><a href="">Premiere</a></li>
+											<li><a href="">其他视频软件</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">思科</a>
+								<ul class="sub-menu2">
+									<li class="hasSub">
+										<a href="">思科技术</a>
+										<ul class="sub-menu2">
+											<li><a href="">IP通信</a></li>
+											<li><a href="">安全</a></li>
+											<li><a href="">路由与交换</a></li>
+											<li><a href="">数据中心</a></li>
+											<li><a href="">网络管理与维护</a></li>
+											<li><a href="">网络架构与设计</a></li>
+											<li><a href="">网络协议</a></li>
+											<li><a href="">无线/光通信</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">思科认证</a>
+										<ul class="sub-menu2">
+											<li><a href="">CCIE</a></li>
+											<li><a href="">CCNA</a></li>
+											<li><a href="">CCNP</a></li>
+											<li><a href="">CCNP Security</a></li>
+											<li><a href="">CCVP</a></li>
+										</ul>
+									</li>
+									<li><a href="">思科网络技术学院</a></li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">网络技术</a>
+								<ul class="sub-menu2">
+									<li><a href="">数据中心</a></li>
+									<li><a href="">网络管理</a></li>
+									<li><a href="">网络理论</a></li>
+									<li><a href="">网络设计</a></li>
+									<li><a href="">网络协议</a></li>
+									<li><a href="">云计算</a></li>
+								</ul>
+							</li>
+							<li class="hasSub">
+								<a href="">效率与娱乐</a>
+								<ul class="sub-menu2">
+									<li class="hasSub">
+										<a href="">电脑办公</a>
+										<ul class="sub-menu2">
+											<li><a href="">Excel</a></li>
+											<li><a href="">Office</a></li>
+											<li><a href="">PPT</a></li>
+											<li><a href="">Word</a></li>
+											<li><a href="">办公设备使用与维修</a></li>
+										</ul>
+									</li>
+									<li class="hasSub">
+										<a href="">个人应用</a>
+										<ul class="sub-menu2">
+											<li><a href="">PC机</a></li>
+											<li><a href="">乐高机器人</a></li>
+											<li><a href="">苹果电脑</a></li>
+											<li><a href="">时间管理</a></li>
+											<li><a href="">手机与PAD</a></li>
+											<li><a href="">游戏攻略</a></li>
+										</ul>
+									</li>
+									<li><a href="">职场技能</a></li>
+								</ul>
+							</li>
+						</ul>
 					</li>
 					<li>
 						<a href="">图书</a>
 					</li>
 					<li>
+						<a href="">电子书</a>
+					</li>
+					<li>
 						<a href="">文章</a>
-					</li>
-					<li>
-						<a href="">专题</a>
-					</li>
-					<li>
-						<a href="">作者</a>
 					</li>
 				</ul>
 				<div class="nav navbar-nav hidden-xs hidden-sm">
@@ -74,7 +377,19 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a href="">个人信息</a>
+								<a href="">我的主页</a>
+							</li>
+							<li>
+								<a href="">我的账户</a>
+							</li>
+							<li>
+								<a href="">购物筐</a>
+							</li>
+							<li>
+								<a href="">设置</a>
+							</li>
+							<li>
+								<a href="">私信</a>
 							</li>
 						</ul>
 					</li>
@@ -209,6 +524,44 @@
 									</div>
 								</div>
 							</div>
+							<div class="col-xs-12 col-md-6 pic-txt-lst">
+								<div class="item">
+									<div class="pic-panel">
+										<a href=""><img src="../static/images/temp/2.png" alt=""></a>
+									</div>
+
+									<div class="txt-panel">
+										<div class="hd">
+											<div class="t">摆渡人（媲美《追风筝的人》《偷影子的人》）</div>
+											<div class="author">[英]克莱尔.麦克福尔</div>
+										</div>
+										<div class="bd">
+											<div class="text-muted">
+												畅销欧美33个国家，荣获多项图书大奖。如果命运是一条孤独的河流，谁会是你灵魂的摆渡人？如果我真的存在，也是因为你需要我。
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-6 pic-txt-lst">
+								<div class="item">
+									<div class="pic-panel">
+										<a href=""><img src="../static/images/temp/2.png" alt=""></a>
+									</div>
+
+									<div class="txt-panel">
+										<div class="hd">
+											<div class="t">摆渡人（媲美《追风筝的人》《偷影子的人》）</div>
+											<div class="author">[英]克莱尔.麦克福尔</div>
+										</div>
+										<div class="bd">
+											<div class="text-muted">
+												畅销欧美33个国家，荣获多项图书大奖。如果命运是一条孤独的河流，谁会是你灵魂的摆渡人？如果我真的存在，也是因为你需要我。
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -247,7 +600,7 @@
 												<span class="offsetp5">1234</span>
 											</a>
 											<a href="" class="text-muted offsetp10">
-												<span>收藏</span>
+												<span>赞</span>
 												<span class="offsetp5">1234</span>
 											</a>
 										</div>
@@ -277,7 +630,7 @@
 												<span class="offsetp5">1234</span>
 											</a>
 											<a href="" class="text-muted offsetp10">
-												<span>收藏</span>
+												<span>赞</span>
 												<span class="offsetp5">1234</span>
 											</a>
 										</div>
@@ -307,7 +660,7 @@
 												<span class="offsetp5">1234</span>
 											</a>
 											<a href="" class="text-muted offsetp10">
-												<span>收藏</span>
+												<span>赞</span>
 												<span class="offsetp5">1234</span>
 											</a>
 										</div>
@@ -352,7 +705,7 @@
 												<span class="offsetp5">1234</span>
 											</a>
 											<a href="" class="text-muted offsetp10">
-												<span>收藏</span>
+												<span>赞</span>
 												<span class="offsetp5">1234</span>
 											</a>
 										</div>
@@ -381,7 +734,7 @@
 												<span class="offsetp5">1234</span>
 											</a>
 											<a href="" class="text-muted offsetp10">
-												<span>收藏</span>
+												<span>赞</span>
 												<span class="offsetp5">1234</span>
 											</a>
 										</div>
@@ -596,7 +949,7 @@
 				<!-- 我们的作者 结束 -->
 
 				<!-- 最新专题 开始 -->
-				<div class="g-block">
+				<!-- <div class="g-block">
 					<div class="hd green">
 						<h4>最新专题</h4>
 						<div class="r-panel">
@@ -675,7 +1028,7 @@
 							<img src="../static/images/hd-pic.png" alt="">
 						</a>
 					</div>
-				</div>
+				</div> -->
 				<!-- <div class="g-block">
 					<div class="hd green">
 						<h4>最新专题</h4>
@@ -830,6 +1183,8 @@
 			&copy; 2014异步社区 <span>·</span> 人民邮电出版社 <span>·</span> All rights reserved
 		</div>
 	</footer>
+
+
 
 
 </body>
